--- a/content/schedule/devrooms/dependency_management.html
+++ b/content/schedule/devrooms/dependency_management.html
@@ -1,7 +1,5 @@
-<p>A popular form of software reuse involves linking open source software (OSS) libraries hosted on centralized code repositories, such as Maven, PyPI or NPM. Developers only need to declare dependencies to external libraries, and automated tools make them available to the workspace of the project. As recent events such as the LeftPad incident, which led to hundreds of thousands of websites to stop working, and the Equifax data breach, which led to a leak of hundreds of thousands of credit card numbers, have demonstrated, dependencies on networks of external libraries can introduce significant operational and compliance risks as well as difficulties to assess security implications.</p>
+<p>As demonstrated by much talked about events such as the LeftPad incident, which led to hundreds of thousands of websites to stop working, and the Equifax data breach, which led to a leak of hundreds of thousands of credit card numbers, dependencies on networks of external libraries can introduce significant operational and compliance risks as well as difficulties to assess security implications. Most development teams still fail to adequately inventory their software dependencies. Even as more code is produced, indirect dependencies continue to undermine security and account for the majority of vulnerabilities.</p>
 
-<p>What to do about that? What are the existing solutions and their limits? What future improvements can we expect from industry or from research? This Devroom is dedicated to discussing software dependencies and package dependency networks: issues, solutions and best practices:</p> 
-<ul>
-<li>tools that help solve the dependencies issues</li>
-<li>use cases and examples of troubles encountered and impact of dependencies issues</li>
-</ul>
+<p>What have been the recent progresses in dependency management made available to developers? What are the remaining key challenges? What future improvements can we expect from industry or from research?</p>
+
+<p>This Devroom aims to establish the state of the art in dependency management, it builds upon the success of last year’s Devroom to which it will constitute a welcome update.</p>
