--- a/content/schedule/devrooms/friends_of_openjdk.html
+++ b/content/schedule/devrooms/friends_of_openjdk.html
@@ -1,1 +1,21 @@
+<p>
+Welcome to Foojay, <a href="https://foojay.io">a place for friends of OpenJDK</a>. 
+Foojay is a community around the OpenJDK, providing tips and insights for Java developers,
+providing user-focused Java and OpenJDK technical dashboards with free data on all things Java,
+including a blog area, <a href="https://foojay.io/today>Foojay Today</a>.
+</p>
 
+<p>
+The Foojay devroom at FOSDEM is an opportunity for developers in this domain to meet, 
+discuss the current state of their projects, and their roadmaps, while also helping others
+to understand the state of these interrelated projects.
+</p>
+
+<p>
+Please join us, regardless of whether you are a core hacker, a plugin hacker, a user, 
+a packager, or a hacker on a project that integrates, extends, or complements anything related to the OpenJDK.
+</p>
+
+<p>
+Onwards to a united approach to helping developers get the most out of the OpenJDK!
+</p>
