Trivial fixes to current patchset.

--- a/content/schedule/devrooms/friends_of_openjdk.html
+++ b/content/schedule/devrooms/friends_of_openjdk.html
@@ -2,7 +2,7 @@
 Welcome to Foojay, <a href="https://foojay.io">a place for friends of OpenJDK</a>. 
 Foojay is a community around the OpenJDK, providing tips and insights for Java developers,
 providing user-focused Java and OpenJDK technical dashboards with free data on all things Java,
-including a blog area, <a href="https://foojay.io/today>Foojay Today</a>.
+including a blog area, <a href="https://foojay.io/today">Foojay Today</a>.
 </p>
 
 <p>
