--- a/content/schedule/devrooms/inframanagement.html
+++ b/content/schedule/devrooms/inframanagement.html
@@ -1,7 +1,7 @@
 <p>
 Infra Management refers to the practice of using code to describe Infrastructure.
 Infrastructure Management includes the following practices : Configuration Management,
-Sustems Management, Infrastructure Orchestration, Infrastructure Management,
+Systems Management, Infrastructure Orchestration, Infrastructure Management,
 Infrastructure Automation, Infrastructure Monitoring, Infrastructure Audit,
 Infrastucture Compliance, and Infrastructure Security.
 </p>
