--- a/content/schedule/devrooms/friends_of_openjdk.html
+++ b/content/schedule/devrooms/friends_of_openjdk.html
@@ -1,8 +1,8 @@
 <p>
 Welcome to Foojay, <a href="https://foojay.io">a place for friends of OpenJDK</a>. 
 Foojay is a community around the OpenJDK, providing tips and insights for Java developers,
-providing user-focused Java and OpenJDK technical dashboards with free data on all things Java,
-including a blog area, <a href="https://foojay.io/today>Foojay Today</a>.
+focused on user-focused Java and OpenJDK technical dashboards with free data on all things Java,
+including a blog area, <a href="https://foojay.io/today">Foojay Today</a> and <a href="https://foojay.io/pedia">Foojay Pedia</a>.
 </p>
 
 <p>
@@ -12,9 +12,14 @@ to understand the state of these interrelated projects.
 </p>
 
 <p>
-Please join us, regardless of whether you are a core hacker, a plugin hacker, a user, 
+Please join us, regardless of whether you are an OpenJDK coder, an everyday Java developer, a user, 
 a packager, or a hacker on a project that integrates, extends, or complements anything related to the OpenJDK.
 </p>
+
+<p>
+The Foojay devroom is co-ordinated by <a href="https://www.azul.com">Azul</a>, <a href="https://www.datastax.com">DataStax</a>, 
+  <a href="https://www.payara.fish">Payara</a>, and <a href="http://snyk.io">Snyk</a>.   
+</p>  
 
 <p>
 Onwards to a united approach to helping developers get the most out of the OpenJDK!
