--- a/content/schedule/devrooms/blockchain_and_crypto_currencies.html
+++ b/content/schedule/devrooms/blockchain_and_crypto_currencies.html
@@ -1,15 +1,9 @@
 <p>
-The Distributed Web devroom is a place for folks to learn about and play with open source frameworks and protocols for building peer-to-peer (P2P) distributed applications. Sessions will include demos, presentations, panels, Q&As, hands-on learning opportunities, facilitated experiences, networking spaces, on-boarding sessions, and discussions of connection points between frameworks/protocols. Sessions will be led by members of each project’s core team and community. 
+The Distributed Web devroom is a place for folks to learn about and play with the P2P, distributed, secure internet is emerging,  distributed, peer-to-peer, secure internet.
+ 
+Sessions will include demos, presentations, panels, Q&As, hands-on learning opportunities, facilitated experiences, networking spaces, on-boarding sessions, and discussions of connection points between frameworks/protocols. Sessions will be led by members of each project’s core team and community. 
 
-lockchain technology is an emerging field of research that has already
-seen many applications in the private and public sector. The most
-obvious and visible ones are cryptocurrencies such as Bitcoin or Ethereum but many
-others projects ranging from logistics, supply chain management,
-identity management, code archive use this technology as basic build
-block to ensure redundancy, security, immutability. Free Software and Open source
-plays an essential role in the development of blockchains and it is
-important to attract the attention of developers and researchers.
-
+The Distributed Web dev room content supports the DWeb values: decentralization, data sovereignty, security, privacy, and censorship-resistance. 
 
 This year presentations will range from new and emerging post-blockchain
 technologies, to hardware wallets to exciting new project using this
