--- a/content/schedule/devrooms/blockchain_and_crypto_currencies.html
+++ b/content/schedule/devrooms/blockchain_and_crypto_currencies.html
@@ -1,11 +1,17 @@
 <p>
-The Distributed Web devroom is a place for folks to learn about and play with the P2P, distributed, secure internet is emerging,  distributed, peer-to-peer, secure internet.
+The Beyond Blockchain - Distributed Web Devroom is a place to learn about and play with the open source infrastructure of the new internet. An emerging internet that is distributed, peer-to-peer, and secure.
  
-Sessions will include demos, presentations, panels, Q&As, hands-on learning opportunities, facilitated experiences, networking spaces, on-boarding sessions, and discussions of connection points between frameworks/protocols. Sessions will be led by members of each project’s core team and community. 
+Our content supports the DWeb values: distributed > decentralized, data sovereignty, security, privacy, censorship-resistance, and generally being cool as humans. 
+ 
+Sessions may include:
+* Q&As
+* demos
+* panels
+* workshops
+* presentations
+* on-boarding sessions
+* hands-on learning opportunities
+* talks that are maybe kind of weird and fun
+* inspiring multimedia arty experience for devs to “get” the distributed web
 
-The Distributed Web dev room content supports the DWeb values: decentralization, data sovereignty, security, privacy, and censorship-resistance. 
-
-This year presentations will range from new and emerging post-blockchain
-technologies, to hardware wallets to exciting new project using this
-technology in innnovative ways.
 <p/>
