--- a/content/schedule/devrooms/software_defined_storage.html
+++ b/content/schedule/devrooms/software_defined_storage.html
@@ -1,14 +1,13 @@
 <p>
-The Software Defined Storage devroom will go into it's fourth round for
-talks around Open Source Software Defined Storage projects, management
-tools and real world deployments.
+The Software Defined Storage devroom will go into it's fifth round for talks
+around Open Source Software Defined Storage projects, management tools
+and real world deployments.
 </p>
-
 <p>
 Presentation topics could include but are not limited too:
 <ul>
-<li>Your work on a SDS project like Ceph, Gluster, OpenEBS or LizardFS</li>
-<li>Your work on or with SDS related projects like SWIFT or Container Storage Interface</li>
+<li>Your work on a SDS project like Ceph, Gluster, OpenEBS, CORTX or Longhorn</li>
+<li>Your work on or with SDS related projects like OpenStack SWIFT or Container Storage Interface</li>
 <li>Management tools for SDS deployments</li>
 <li>Monitoring tools for SDS clusters</li>
 </ul>
