--- a/content/schedule/devrooms/friends_of_openjdk.html
+++ b/content/schedule/devrooms/friends_of_openjdk.html
@@ -12,8 +12,7 @@ to understand the state of these interrelated projects.
 </p>
 
 <p>
-Please join us, regardless of whether you are a core hacker, a plugin hacker, a user, 
-a packager, or a hacker on a project that integrates, extends, or complements anything related to the OpenJDK.
+Please join us to see and share the range of tools and technologies actively being developed on and used with the OpenJDK.
 </p>
 
 <p>
