--- a/content/schedule/devrooms/software_defined_networking.html
+++ b/content/schedule/devrooms/software_defined_networking.html
@@ -7,15 +7,10 @@
     to be an exciting, growing and diverse field.
 </p>
 <p>
-    We welcome submissions on a host of SDN topics, including virtual
+    We typically have talks on a variety of SDN topics, including virtual
     switching, dataplace performance, open source SDN controllers, virtual
-    routing (i.e. how you move the packets). We also welcome topics from the
-    distinct, but closely related field of Network Functions Virtualisation
-    (NFV), including open source NFV platforms, network functions and
-    applications (i.e. why you move the packets).
-</p>
-<p>
-    Check out the <a href=http://mdr78.github.io/2020/12/01/fosdem-cfp.html>CfP</a>
-    for details of how to submit and for an even longer, but still not exhaustive
-    list of projects and topics.
+    routing (i.e. how you move the packets). We also have talks from the
+    distinct, but closely related field of Network Functions Virtualisation (NFV),
+    including open source NFV platforms, network functions and applications
+    (i.e. why you move the packets).
 </p>
