--- a/content/schedule/devrooms/beyond_blockchain-distributed_web_devroom.html
+++ b/content/schedule/devrooms/beyond_blockchain-distributed_web_devroom.html
@@ -1,5 +1,5 @@
 <p>
-The Beyond Blockchain - Distributed Web Devroom is a place to learn about and play with the open source infrastructure of the new internet. An emerging internet that is distributed, peer-to-peer, and secure. (Learn more here!)[https://github.com/MorvinBear/Fosdem-Beyond-Blockchain-CfP]
+The Beyond Blockchain - Distributed Web Devroom is a place to learn about and play with the open source infrastructure of the new internet. An emerging internet that is distributed, peer-to-peer, and secure. [Learn more here!](https://github.com/MorvinBear/Fosdem-Beyond-Blockchain-CfP)
  
 Our content supports the DWeb values: distributed > decentralized, data sovereignty, security, privacy, censorship-resistance, and generally being cool as humans. 
  
