--- a/content/schedule/devrooms/mysql.html
+++ b/content/schedule/devrooms/mysql.html
@@ -1,5 +1,5 @@
 <p>The MySQL Devroom covers the world's most popular open source database : <a href="https://www.mysql.com/products/community/">MySQL</a> and projects of the MySQL's ecosystem.</p>
-<p>MySQL is free and open-source software under the terms of the GNU General Public License. MySQL is a relational database manafement system (RDMBS) but also a NoSQL Document Store.</p>
+<p>MySQL is free and open-source software under the terms of the GNU General Public License. MySQL is a relational database management system (RDMBS) but also a NoSQL Document Store.</p>
 <p>This year MySQL celebrates its 25th anniversary !</p>
 <p>In this devroom you will find talks related to MySQL's development, deployement and operations. Talks related to Open Source projects enhencing MySQL's experience, 
 adding functionalities or hacking MySQL are also more than welcome.</p>
