--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -7,7 +7,7 @@ sponsors_under_navigation: true
 %>
 Ways to have the schedule with you at all times, without wasting trees: 
 
-<h3>Apps for Mobile Devices, tested for 2020</h3>
+<h3>Apps for Mobile Devices, tested for 2021</h3>
 <ul>
 <li><b>Android: FOSDEM Companion</b><br />
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
@@ -22,32 +22,9 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=net.gaast.giggity">Google Play</a> and <a href="https://f-droid.org/en/packages/net.gaast.giggity/">F-droid</a>.<br />
 </li>
-<li><b>Android: FOSDEM</b><br />
-    <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
-    Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
-</li>
 <li><b>Progressive Web App: Sojourner</b><br />
     <a href="https://github.com/loomchild/sojourner-web">Source code</a>,<br />
     Available <a href="https://fosdem.sojourner.rocks">here</a>.<br />
-</li>
-<li><b>Generic mobile web interface</b><br />
-    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
-</li>
-<li><b>iPhone: fosdem-org</b><br />
-    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
-    Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br />
-</li>
-<li><b>Ubuntu Phone: FOSDEM</b><br />
-    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
-    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
-</li>
-<li><b>Sailfish OS: FOSDEM QML</b><br />
-	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
-	Available from the Sailfish Store.<br />
-</li>
-<li><b>Windows Phone: FOSDEM</b><br />
-    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
-    Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br />
 </li>
 <li><b>QT-based (Desktops, Maemo5): confclerk</b><br />
     <a href="https://www.toastfreeware.priv.at/confclerk">Website and source code</a>,<br />
@@ -64,6 +41,29 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 
 <h3>Apps for Mobile Devices, archive</h3>
 <ul>
+<li><b>Android: FOSDEM (2020)</b><br />
+    <a href="https://github.com/PeterMathijssen/aia/blob/master/fosdem_xml_12.aia">Source code</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=appinventor.ai_pmathijssen.fosdem_xml_12&hl=en">Google Play</a>.<br />
+</li>
+<li><b>Generic mobile web interface (2020)</b><br />
+    <a href="https://programm.froscon.de/fosdem/">Mobile web schedule</a> thanks to our friends at Froscon.<br />
+</li>
+<li><b>iPhone: fosdem-org (2020)</b><br />
+    <a href="https://github.com/johanhenselmans/fosdem/">Source code</a>,<br />
+    Available from <a href="https://apps.apple.com/au/app/fosdem-org/id941904933">the Apple App Store</a>.<br />
+</li>
+<li><b>Windows Phone: FOSDEM (2020)</b><br />
+    <a href="https://github.com/julianls/FOSDEM">Source code</a>,<br />
+    Older release available from the <a href="https://www.microsoft.com/en-us/p/fosdem/9nblggh5j4kd">Microsoft Store</a>.<br />
+</li>
+<li><b>Ubuntu Phone: FOSDEM (2020)</b><br />
+    <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
+    Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
+</li>
+<li><b>Sailfish OS: FOSDEM QML (2020)</b><br />
+	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
+	Available from the Sailfish Store.<br />
+</li>
 <li><b>N900: Sojourner (2019)</b><br />
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
     Available for Maemo in <a href="http://maemo.org/packages/view/sojourner/">extras-devel</a>,<br />
