mobile apps update

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -31,6 +31,14 @@ Ways to have the schedule with you at all times, without wasting trees:
     Available in official Debian, Ubuntu and Maemo5 repositories,<br />
     (the successor of <a href="https://sourceforge.net/projects/fosdem-maemo/">fosdem-maemo</a>).<br />
 </li>
+<li><b>Sailfish OS: FOSDEM QML</b><br />
+	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
+	Available from the Sailfish Store.<br />
+</li>
+<li><b>GTK Mobile/Desktop: Confy</b><br />
+    <a href="https://confy.kirgroup.net">Website and source code</a>,<br />
+    Available in AUR for ArchLinux.<br />
+</li>
 </ul>
 
 <p>
@@ -59,10 +67,6 @@ Others? Or tested one of the below for this year? Let us know on our mailinglist
 <li><b>Ubuntu Phone: FOSDEM (2020)</b><br />
     <a href="https://github.com/delijati/fosdem-qml">Source code</a>,<br />
     Available from the <a href="https://open-store.io/app/fosdem-qml.delijati">OpenStore</a>.<br />
-</li>
-<li><b>Sailfish OS: FOSDEM QML (2020)</b><br />
-	<a href="https://gitlab.com/fabrixxm/harbour-fosdem-qml">Source code</a>,<br />
-	Available from the Sailfish Store.<br />
 </li>
 <li><b>N900: Sojourner (2019)</b><br />
     <a href="https://github.com/loomchild/sojourner">Website and source code</a>,<br />
