mobile app update

--- a/content/schedule/mobile.html
+++ b/content/schedule/mobile.html
@@ -13,10 +13,9 @@ Ways to have the schedule with you at all times, without wasting trees:
     <a href="https://github.com/cbeyls/fosdem-companion-android">Source code</a>,<br />
     Available from <a href="https://play.google.com/store/apps/details?id=be.digitalia.fosdem">Google Play</a> and <a href="https://f-droid.org/packages/be.digitalia.fosdem/">F-droid</a>.<br />
 </li>
-<li><b>Android: FOSDEM Schedule (CampFahrPlan)</b><br />
-    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2020">Source code</a>,<br />
-    Available from the <a
-    href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a>.<br />
+<li><b>Android: FOSDEM Schedule</b><br />
+    <a href="https://github.com/johnjohndoe/CampFahrplan/tree/fosdem-2021">Source code</a>,<br />
+    Available from <a href="https://play.google.com/store/apps/details?id=info.metadude.android.fosdem.schedule">Google Play</a> and <a href="https://f-droid.org/en/packages/info.metadude.android.fosdem.schedule/">F-droid</a><br />
 </li>
 <li><b>Android: Giggity</b><br />
     <a href="https://wilmer.gaa.st/main.php/giggity.html">Website and source code</a>,<br />
