practical: Mention timezone

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -19,6 +19,12 @@ navcat: true
   Open your favourite web browser and navigate to the designated page.
 </p>
 
+<a name="timezone"></a>
+<h3>Timezone</h3>
+<p>
+  All the times on this website are displayed in the local time zone for Brussels which is Central European Time, CET (UTC+1).
+</p>
+
 <a name="services"></a>
 <h3>Services during FOSDEM</h3>
 <p>
