--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 <%
 # vim: set ts=2 sw=2 et ai ft=eruby:
 %>
-<p>An overview of <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
+<p>All times are CET (UTC+1, Brussels time). An overview of <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
 is available, too.</p>
 <table class="table table-striped table-bordered table-condensed">
   <thead>
