Ugly but it works - also fixes a divide by zero error

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -13,6 +13,12 @@ navcat: true
   we also gratefully accept <a href="page:support/donate">donations</a>.
 </p>
 
+<a name="online"></a>
+<h3>FOSDEM 2021 Online</h3>
+<p>
+  FOSDEM 2021 is a fully online edition. How does this work? Visit <a href="page:practical/online">this page</a> for more details.
+</p>
+
 <a name="venue"></a>
 <h3>Getting there</h3>
 <p>
