--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -13,12 +13,12 @@ navcat: true
 <a name="talks"></a>
 <h4>Keynotes and talks</h4>
 <p>
-    The full conference can be accessed from the <a href="<%= @site.config[:base_url] + '/schedule/' %>">schedule</a>, containing a link to each
+    The full conference can be accessed from the <a href="page:schedule">schedule</a>, containing a link to each
     individual talk or devroom. Each devroom is in a (virtual) room, which you can access by clicking the link. All rooms are hosted on <i>chat.fosdem.org</i>.
 </p>
-<img src="screen_1.png" alt="Click on the marked button to start the video." aria-labelledby="virtual-room-view-before-you-can-start" />
+<img src="/2021/practical/screen_1.png" alt="Click on the marked button to start the video." aria-labelledby="virtual-room-view-before-you-can-start" />
 <i id="virtual-room-view-before-you-can-start">Before you can see any video, you will have to click the button (1.) to enable the video button.</i>
-<img src="main_conference_screen.png" alt="Virtual room view." aria-labelledby="virtual-room-view" />
+<img src="/2021/practical/main_conference_screen.png" alt="Virtual room view." aria-labelledby="virtual-room-view" />
 <i id="virtual-room-view">Virtual room view. 1 is the video window; 2 is the chat window.</i>
 <p>
     The virtual room is where the action happens. Each room is divided in two parts:
@@ -28,7 +28,7 @@ navcat: true
             recording of the Q&A.            
         </li>
         <li>
-            The chat window. You can freely chat (but please keept it relevant and remember our <a href="<%= @site.config[:base_url] + '/practical/conduct/' %>">code of conduct</a>).
+            The chat window. You can freely chat (but please keept it relevant and remember our <a href="page:practical/conduct">code of conduct</a>).
             If you find a question very relevant or insightful, you can upvote it by clicking the <i>thumbs up</i> button. The most upvoted questions will
             be asked during the Q&A at the end of each talk.
         </li>
@@ -44,14 +44,14 @@ navcat: true
 <h3>Participating</h3>
 <a name="chatting"></a>
 <h4>Chatting</h4>
-<img src="register_screen.png" alt="Register for an account." aria-labelledby="register-chat" />
+<img src="/2021/practical/register_screen.png" alt="Register for an account." aria-labelledby="register-chat" />
 <i id="register-chat">If you wish to participate in the chat or the Q&A, you'll have to register for an account.</i>
 <p></p>
 <a name="upvoting"></a>
 <h4>Upvoting questions</h4>
-<img src="upvote.png" alt="Click on the emoji face to upvote a question." aria-labelledby="upvote-question" />
+<img src="/2021/practical/upvote.png" alt="Click on the emoji face to upvote a question." aria-labelledby="upvote-question" />
 <i id="upvote-question">Click on the emoji face (1.) to upvote a question.</i>
-<img src="upvote_thumbs_up.png" alt="Click on the thumbs up emjoi to upvote a question." aria-labelledby="thumbs-up-question" />
+<img src="/2021/practical/upvote_thumbs_up.png" alt="Click on the thumbs up emjoi to upvote a question." aria-labelledby="thumbs-up-question" />
 <i id="thumbs-up-question">After clicking on the emoji face, you'll arrive at a larger window with a lot of emoji's. Clicking on the thumbs up icon (1.) will upvote the question.</i>
 <p>
     You can upvote a question by clicking on the emoji face next to each line. When you click on <i>thumbs up</i>, the question or comment will be upvoted
