--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -5,55 +5,92 @@ navcat: true
 <h3>FOSDEM 2021 is the first fully online edition of FOSDEM!</h3>
 <p>
     Welcome to our first online edition. We still have our familiar programme of keynotes, devrooms and stands, but in a slightly different
-    form. We have collected useful information on how to navigate this brave new world.
+    form. As we can't simply point you to the right room (always a challenge at the ULB), we've provided a lot more extra practical information
+    so you can enjoy the conference.
 </p>
 
 <a name="conference"></a>
 <h3>Visiting the conference</h3>
+<p>
+    Visiting the conference is as always free. All talks (keynotes, devrooms) are on the <a href="page:schedule">schedule</a>, while the stands have
+    their own <a href="https://stands.fosdem.org">website</a>. To make this a real conference instead of a stream of video's, we've combined our
+    existing video system with <a href="https://jitsi.org/">Jitsi</a> for live video and <a href="https://matrix.org/">Matrix</a> for interaction and
+    putting everything together.
+</p>
+<p>
+    <b>You do not need an account to visit the conference, watch talks or visit stands.</b> You will need an account on 
+    <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> to participate in the discussion or upvote questions. We'll explain all this, so don't
+    worry!
+</p>
+
 <a name="talks"></a>
-<h4>Keynotes and talks</h4>
+<h4>Talks</h4>
 <p>
-    The full conference can be accessed from the <a href="page:schedule">schedule</a>, containing a link to each
-    individual talk or devroom. Each devroom is in a (virtual) room, which you can access by clicking the link. All rooms are hosted on <i>chat.fosdem.org</i>.
+    The <a href="page:schedule">schedule</a> contains a link to each individual talk or devroom. Each devroom maps to a room on <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>. The
+    keynotes are in the <i>keynote</i> room.
 </p>
-<img src="/2021/practical/screen_1.png" alt="Click on the marked button to start the video." aria-labelledby="virtual-room-view-before-you-can-start" />
-<i id="virtual-room-view-before-you-can-start">Before you can see any video, you will have to click the button (1.) to enable the video button.</i>
-<img src="/2021/practical/main_conference_screen.png" alt="Virtual room view." aria-labelledby="virtual-room-view" />
-<i id="virtual-room-view">Virtual room view. 1 is the video window; 2 is the chat window.</i>
+<img src="/2021/practical/screen_1.png" alt="Click on the marked button to start the video." aria-labelledby="virtual-room-view-before-you-can-start" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
+<div id="virtual-room-view-before-you-can-start" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Before you can see any video, you will have to click the button (1.) to enable the video stream.</i></div>
 <p>
-    The virtual room is where the action happens. Each room is divided in two parts:
-    <ol>
-        <li>
-            The video window, where the stream will be displayed. This will be a combination of a prerecorded video (the talk) and a live
-            recording of the Q&A.            
-        </li>
-        <li>
-            The chat window. You can freely chat (but please keept it relevant and remember our <a href="page:practical/conduct">code of conduct</a>).
-            If you find a question very relevant or insightful, you can upvote it by clicking the <i>thumbs up</i> button. The most upvoted questions will
-            be asked during the Q&A at the end of each talk.
-        </li>
-    </ol>
+    In each room, you'll see a fairly large widget which will display the video stream. The first time you visit <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>,
+    you'll have to click <i>allow</i> so the widget can start playing video's. You can resize the video widget or watch it full screen.
+</p>
+<img src="/2021/practical/main_conference_screen.png" alt="Room view." aria-labelledby="virtual-room-view" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
+<div id="virtual-room-view" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Room view. 1 is the video window; 2 is the chat window.</i></div>
+<p>
+    Below the video stream is the interactive part of FOSDEM 2021: the (Matrix) chat window. During the talk, you can discuss the topic with all other
+    attendees. You will have to create a <a href="#chatting">Matrix account</a> to participate, and while we encourage free and open exchange of views,
+    both the devroom and FOSDEM staff will be moderating the discussion. Any violations of our <a href="page:practical/conduct">code of conduct</a> will
+    be acted on.
 </p>
 <p>
-    It is not necessary to register to watch video's, but you will need an account to post or upvote questions.
+    If you find a question or remark interesting or useful, you can <a href="#upvoting">upvote it</a> by giving it a <i>thumbs up</i>. The most upvoted
+    questions will be visible to the host and speaker, who will answer (some) of them during the Q&A.
 </p>
+
 <a name="stands"></a>
 <h4>Stands</h4>
+<p>
+    The stands have their own website over at <a href="https://stands.fosdem.org"><i>stands.fosdem.org</i></a>. We've organised the stands by a theme
+    so they are easier to find.
+</p>
+<p>
+    There is a nice cosy corner for each stand containing of static information (a web page), some prerecorded video's and a chatroom on <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> using the
+    same principle as for devrooms, but without a video widget.
+</p>
+<p>
+    As for devrooms, <b>you do not need an account to visit a stand or watch a video</b>, but you will need a <a href="#chatting">Matrix account</a> if you wish to participate in the discussion.
+    There will be someone present in each room from the project team to answer any questions you might have, and some have invited a developer/project leader/ ... to
+    provide a hint of the future for their project and to answer any pressing question you might have.
+</p>
 
 <a name="q_and_a"></a>
 <h3>Participating</h3>
+<p>
+    If you want to participate in the event (which we would like very much), you'll need to create a <a href="#chatting">Matrix account</a>.
+</p>
 <a name="chatting"></a>
 <h4>Chatting</h4>
-<img src="/2021/practical/register_screen.png" alt="Register for an account." aria-labelledby="register-chat" />
-<i id="register-chat">If you wish to participate in the chat or the Q&A, you'll have to register for an account.</i>
-<p></p>
+<img src="/2021/practical/register.png" alt="Register button." aria-labelledby="register-button" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
+<div id="register-button" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Click on the "register" button to register an account.</i></div>
+
+<img src="/2021/practical/register_screen.png" alt="Register for an account." aria-labelledby="register-chat" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
+<div id="register-chat" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Choose a username, password and optionally provide an e-mail address.</i></div>
+<p>
+    You want to ask a question, provide an opinion or upvote an interesting remark? Create an account! Thanks to the good people at Matrix this process is
+    fairly self-explanatory. Provide a username, password and optionally an e-mail address and you'll be good to go!
+</p>
+<p>
+    When participating in the discussion, please remember to be civil and respectful. Both the devroom (or stand) organisers will moderate the talk and
+    any violations of our <a href="page:practical/conduct">code of conduct</a> will be dealt with.
+</p>
 <a name="upvoting"></a>
 <h4>Upvoting questions</h4>
-<img src="/2021/practical/upvote.png" alt="Click on the emoji face to upvote a question." aria-labelledby="upvote-question" />
-<i id="upvote-question">Click on the emoji face (1.) to upvote a question.</i>
-<img src="/2021/practical/upvote_thumbs_up.png" alt="Click on the thumbs up emjoi to upvote a question." aria-labelledby="thumbs-up-question" />
-<i id="thumbs-up-question">After clicking on the emoji face, you'll arrive at a larger window with a lot of emoji's. Clicking on the thumbs up icon (1.) will upvote the question.</i>
+<img src="/2021/practical/upvote.png" alt="Click on the emoji face to upvote a question." aria-labelledby="upvote-question" style="max-width: 96%; margin: 2em 2% 0 2%;" />
+<div id="upvote-question" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Click on the face (1.) to upvote a question.</i></div>
+<img src="/2021/practical/upvote_thumbs_up.png" alt="Click on the thumbs up emjoi to upvote a question." aria-labelledby="thumbs-up-question" style="max-width: 96%; margin: 2em 2% 0 2%;" />
+<div id="thumbs-up-question" style="margin: .5em 2% 2em 2%; width: 96%;"><i>After clicking on the face, you'll arrive at a larger window with a lot of emoji's. Clicking on the thumbs up icon (1.) will upvote the question.</i></div>
 <p>
-    You can upvote a question by clicking on the emoji face next to each line. When you click on <i>thumbs up</i>, the question or comment will be upvoted
-    and visible in a special widget for the moderators and hosts. They will decide what questions get asked in the live Q&A.
+    You can upvote a question by clicking on the emoji face next to each line. When you click on <i>thumbs up</i>, the question or comment will be upvoted. The most upvoted
+    questions will be visible to the host and speaker, who will answer (some) of them during the Q&A.
 </p>
