Add infodesk link

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -8,6 +8,11 @@ navcat: true
     form. As we can't simply point you to the right room (always a challenge at the ULB), we've provided a lot more extra practical information
     so you can enjoy the conference.
 </p>
+<a name="infodesk"></a>
+<p>
+    Have any questions after reading this document? Prefer to talk to a human being? Join the <a href="https://chat.fosdem.org/#/room/#infodesk:fosdem.org">Infodesk channel</a>
+    on <i>chat.fosdem.org</i>.
+</p>
 
 <a name="conference"></a>
 <h3>Visiting the conference</h3>
