UPdated stands page & link

--- a/content/stands.html
+++ b/content/stands.html
@@ -6,7 +6,15 @@ navtitle: Stands
 # vim: set ts=2 sw=2 et ai ft=eruby:
 %>
 <p>
-Stands can be used to share information, demo software, sell merchandising,
-give away goodies and so forth, and to present themselves to the visitors
-in a more personal fashion.
+    Online stands may seem a bit different from physical stands, but not a lot has changed. We have a little over 50 stands, organised per <a href="https://stands.fosdem.org/themes/">theme</a>.
+    Normally, we would also split them per building, but this year we decided not to do so ;-)
+</p>
+<p>
+    Each stand has its own page (or group of pages), with all the information and topics they wish to show you. We've also created a special chat room for each stand, where you can discuss with the team behind the project (a bit like the hallways - though less crowded). Some stands also recorded video's, demoing their product or showing their <i>new hot thing</i>.
+</p>
+<p>
+    You can browse the stands per theme <a href="https://stands.fosdem.org/themes/">here</a> (or below) or visit all the stands <a href="https://stands.fosdem.org/stands/">here</a>.
+</p>
+<p>
+    You can visit all the stands at <a href="https://stands.fosdem.org">stands.fosdem.org</a>.
 </p>
