clarify accounts, bridging & stands
thanks for putting this together! i have made some minor clarifications from the matrix side.

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -18,13 +18,13 @@ navcat: true
 <h3>Visiting the conference</h3>
 <p>
     Visiting the conference is as always free. All talks (keynotes, devrooms) are on the <a href="page:schedule">schedule</a>, while the stands have
-    their own <a href="https://stands.fosdem.org">website</a>. To make this a real conference instead of a stream of video's, we've combined our
+    their own <a href="https://stands.fosdem.org">website</a>. To make this a real conference instead of a stream of videos, we've combined our
     existing video system with <a href="https://jitsi.org/">Jitsi</a> for live video and <a href="https://matrix.org/">Matrix</a> for interaction and
     putting everything together.
 </p>
 <p>
-    <b>You do not need an account to visit the conference, watch talks or visit stands.</b> You will need an account on 
-    <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> to participate in the discussion or upvote questions. We'll explain all this, so don't
+    <b>You do not need an account to visit the conference, watch talks or visit stands.</b> You will need a Matrix account from 
+    <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> (or elsewhere) to participate in the discussion or upvote questions. We'll explain all this, so don't
     worry!
 </p>
 
@@ -38,7 +38,7 @@ navcat: true
 <div id="virtual-room-view-before-you-can-start" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Before you can see any video, you will have to click the button (1.) to enable the video stream.</i></div>
 <p>
     In each room, you'll see a fairly large widget which will display the video stream. The first time you visit <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a>,
-    you'll have to click <i>allow</i> so the widget can start playing video's. You can resize the video widget or watch it full screen.
+    you'll have to click <i>allow</i> so the widget can start playing videos. You can resize the video widget or watch it full screen.
 </p>
 <img src="/2021/practical/main_conference_screen.png" alt="Room view." aria-labelledby="virtual-room-view" style="max-width: 96%; margin: 2em 2% 0 2%;"/>
 <div id="virtual-room-view" style="margin: .5em 2% 2em 2%; width: 96%;"><i>Room view. 1 is the video window; 2 is the chat window.</i></div>
@@ -52,6 +52,11 @@ navcat: true
     If you find a question or remark interesting or useful, you can <a href="#upvoting">upvote it</a> by giving it a <i>thumbs up</i>. The most upvoted
     questions will be visible to the host and speaker, who will answer (some) of them during the Q&A.
 </p>
+<p>
+    You can also participate in rooms via IRC (Freenode) or XMPP, although upvoting messages isn't yet bridged.  For instance, the Cloud devroom is available on Matrix at
+    <a href="https://matrix.to/#/#cloud:fosdem.org">#cloud:fosdem.org</a> but also <a href="irc://irc.freenode.net/cloud">#cloud</a> on Freenode and
+    <a href="xmpp://#cloud#fosdem.org@matrix.org?join">xmpp://#cloud#fosdem.org@matrix.org?join</a> on XMPP.
+</p>
 
 <a name="stands"></a>
 <h4>Stands</h4>
@@ -61,7 +66,7 @@ navcat: true
 </p>
 <p>
     There is a nice cosy corner for each stand containing of static information (a web page), some prerecorded video's and a chatroom on <a href="https://chat.fosdem.org"><i>chat.fosdem.org</i></a> using the
-    same principle as for devrooms, but without a video widget.
+    same principle as for devrooms.  Stand admins can add a moderated live-stream/video widget by pressing the video call button on chat.fosdem.org to videochat with visitors if they like.
 </p>
 <p>
     As for devrooms, <b>you do not need an account to visit a stand or watch a video</b>, but you will need a <a href="#chatting">Matrix account</a> if you wish to participate in the discussion.
