oops, thinko'd on the freenode bridge channel name

--- a/content/practical/online.html
+++ b/content/practical/online.html
@@ -54,7 +54,7 @@ navcat: true
 </p>
 <p>
     You can also participate in rooms via IRC (Freenode) or XMPP, although upvoting messages isn't yet bridged.  For instance, the Cloud devroom is available on Matrix at
-    <a href="https://matrix.to/#/#cloud:fosdem.org">#cloud:fosdem.org</a> but also <a href="irc://irc.freenode.net/cloud">#cloud</a> on Freenode and
+    <a href="https://matrix.to/#/#cloud:fosdem.org">#cloud:fosdem.org</a> but also <a href="irc://irc.freenode.net/fosdem-cloud">#fosdem-cloud</a> on Freenode and
     <a href="xmpp://#cloud#fosdem.org@matrix.org?join">xmpp://#cloud#fosdem.org@matrix.org?join</a> on XMPP.
 </p>
 
