--- a/content/schedule/devrooms/friends_of_openjdk.html
+++ b/content/schedule/devrooms/friends_of_openjdk.html
@@ -6,6 +6,12 @@ including a blog area, <a href="https://foojay.io/today">Foojay Today</a> and <a
 </p>
 
 <p>
+  <b>Note:</b> For more on Foojay, see the 
+  presentation <a href="https://www.youtube.com/watch?v=Qcb6Ci2bWSM">foojay: A Place for Friends of OpenJDK</a> on YouTube
+  and join us on Twitter <a href="https://twitter.com/foojayio">@foojayio</a>.
+</p>  
+
+<p>
 The Foojay devroom at FOSDEM is an opportunity for developers in this domain to meet, 
 discuss the current state of their projects, and their roadmaps, while also helping others
 to understand the state of these interrelated projects.
