add timezone info to main schedule page

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -45,11 +45,11 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 <p>
   Every year, FOSDEM hosts a wide variety of activities.
   This page gives an overview with links to further information about
-  scheduled events.
+  scheduled events. <b>All times CET (UTC+1).</b>
 </p>
 
 <p>
-  FOSDEM is a very busy conference.
+  FOSDEM is a rather busy conference.
 <% if speakers.size > 100 and events.size > 100 %>
   This edition features <%= speakers.size %> speakers, <%= events.size + 1 %>
   events, and <%= tracks.size %> tracks.
