schedule: fix internal link to stands

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -80,7 +80,7 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
   <a href="#maintracks">main tracks</a>,
   <a href="#devrooms">developer rooms</a>,
   <a href="#lightningtalks">lightning talks</a>,
-  <a href="#standtracks">stands</a> and
+  <a href="#stands">stands</a> and
   <a href="#certification">certification exams</a>.
 </p>
 
